--- a/css/index.css
+++ b/css/index.css
@@ -95,11 +95,12 @@ color: white;
 @media only screen and (max-width: 800px) {
     .productarea {
       flex-direction: column;
+      margin-bottom: 20px;
     }
   }
 
   @media only screen and (max-width: 800px) {
     .productarea img {
-        height: 300px;
+        height: 250px;
     }
   }
